# microforge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
doc/: spec-format.md
examples/: spec_invalid.yaml  spec_large.yaml  spec_valid.yaml
src/: main.py
src/microforge/api/v1/: providers.py  routes.py
src/microforge/application/: spec_ports.py  spec_validation_service.py
src/microforge/application/generation/: __init__.py
src/microforge/application/generation/ports/: __init__.py  inbound.py  outbound.py
src/microforge/application/generation/use_cases/: __init__.py  generate_project.py
src/microforge/application/spec/: ports.py  validate_spec.py
src/microforge/application/spec/ports/: inbound.py  outbound.py
src/microforge/application/spec/use_cases/: validate_spec.py
src/microforge/domain/: spec_errors.py  spec_models.py  spec_semantics.py
src/microforge/domain/generation/: project_file.py
src/microforge/domain/spec/: models.py  semantics.py  types.py
src/microforge/infrastructure/: yaml_spec_loader.py
src/microforge/infrastructure/outbound/generation/: __init__.py  fastapi_project_generator.py  (+2 more)
src/microforge/infrastructure/spec/: yaml_spec_loader.py
test/: conftest.py
test/api/: test_v1_routes.py
test/application/: test_generate_project_use_case.py  test_spec_validation_service.py
test/domain/: test_spec_semantics.py
test/infrastructure/: test_fastapi_project_generator.py  test_fastapi_project_generator_methods.py  test_repository_filters.py  test_yaml_spec_loader.py  test_zip_project_packager.py
(+42 files in other folders)
