[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "microforge"
version = "0.1.0"
description = "FastAPI microservice skeleton"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pyyaml>=6.0",
  "python-multipart>=0.0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/microforge"]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "httpx>=0.26",
  "ruff>=0.6",
  "black>=24.8",
  "mypy>=1.12",
  "pytest-cov>=7.1.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E203", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["test"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
